work successfully finished. I only need to add logs